--- a/components/code-editor/code-editor.html
+++ b/components/code-editor/code-editor.html
@@ -21,7 +21,7 @@
       get: function() { return this.editor.getOption('theme'); },
       set: function(newTheme) {
         var style = document.createElement("style");
-        style.textContent = '@import "http://components.geekonaut.de/code-editor/codemirror/theme/' + newTheme + '.css";';
+        style.textContent = '@import "stylesheets/' + newTheme + '.css";';
         this.root.appendChild(style);
         this.editor.setOption('theme', newTheme);
       }
@@ -32,7 +32,7 @@
       set: function(newMode) {
         var self = this;
         var script = document.createElement("script");
-        script.src = 'http://components.geekonaut.de/code-editor/codemirror/mode/' + newMode + '/' + newMode + '.js';
+        script.src = 'javascripts/' + newMode + '.js';
         script.onload = function() {
           self.editor.setOption('mode', newMode);
         };
@@ -90,6 +90,8 @@
             if(self.attributes.theme) self.theme = self.attributes.theme.value;
             if(self.attributes.mode)  self.mode  = self.attributes.mode.value;
             if(self.attributes.src)   self.src   = self.attributes.src.value;
+            if(self.attributes.modeUrl)  self.modeUrl  = self.attributes.modeUrl.value;
+            if(self.attributes.themeUrl)  self.themeUrl  = self.attributes.themeUrl.value;
 
             var i = editorReadyCallbacks.length;
             while(i--) {
