--- a/components/code-editor/code-editor.html
+++ b/components/code-editor/code-editor.html
@@ -1,6 +1,6 @@
 <template>
     <style>
-        @import "http://components.geekonaut.de/code-editor/codemirror/lib/codemirror.css";
+        @import "stylesheets/codemirror.css";
 
         :host { display: block; }
         .CodeMirror { height: 100%; }
