--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ code-editor{
   top: 15px;
   width: 30%;
   left: 35%;
+  margin-bottom: 30px;
 }
 
 html /deep/ paper-button{
@@ -61,6 +62,28 @@ html /deep/ paper-button{
 
 #resultDialog{
   width: 450px;
+}
+
+#options{
+  border-bottom: solid 1px;
+}
+
+#options /deep/ .collapse-content {
+  margin: 20px;
+}
+
+#repeatsLabel {
+  padding-left: 12px;
+  color: #a0a0a0;
+}
+
+.header{
+  border-bottom: solid 2px;
+}
+
+.header h3{
+  margin: 7px;
+  margin-bottom: 2px;
 }
 
 
